syntax = "proto3";

// protoc --go_out=. --go-grpc_out=. --go-grpc_opt=paths=source_relative --go_opt=paths=source_relative *.proto 
option go_package = "./;user";

package user;

message UserId {
    string uuid=1;
}

message UserInfo {
    string Login=1;
    string FirstName=2;
    string LastName=3;
}

service UserService {
    rpc GetUserCtx(UserId) returns (UserInfo) {}
}
